--- a/.SOURCE/mkdocs.yml
+++ b/.SOURCE/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Dungeons Modding Guidebook
 
 #Navigation
 nav:
-  - Home: index.md 
+  - Home: index.html
   - Installing Mods: gettingstarted.md
   - Creating Mods: creatingmods.md
   - Resources: resources.md
